changed circle on hexagon

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Canvas&DOM</title>
+    <title>Рисование шестигранника</title>
 </head>
 <body>
-    <h1>Drawing Program</h1>
-    <canvas id = "imgCanvas" width="400px" height="500px" onclick="draw(event)"></canvas>
-    <script src = "script.js"></script>
+    <canvas id="canvas" width="500" height="500"></canvas>
+
+    <script src="script.js"></script>
 </body>
 </html>
